Add models, connect to DB, create repo & user handler, set up user management web

--- a/web/index.html
+++ b/web/index.html
@@ -14,12 +14,12 @@
         <h2 class="font-weight-bold">Car trading</h2>
         <h1 class="display-4 font-weight-bold" style="text-shadow: 5px 5px 5px rgba(33, 32, 32, 0.51);">Management
             system<br></h1>
-        <a href="/static/cars.html" class="btn mt-3 px-5 py-2 font-weight-bold"
-            style="background-color: blanchedalmond; border-radius: 15px;">Cars</a>
-        <a href="/static/model.html" class="btn mt-3 px-5 py-2 font-weight-bold"
-            style="background-color: blanchedalmond; border-radius: 15px;">Models</a>
-        <a href="/static/manufacturer.html" class="btn mt-3 px-5 py-2 font-weight-bold"
-            style="background-color: blanchedalmond; border-radius: 15px;">Manufacturer</a>
+        <a href="/static/users.html" class="btn mt-3 px-5 py-2 font-weight-bold"
+            style="background-color: blanchedalmond; border-radius: 15px;">Users</a>
+<!--        <a href="/static/model.html" class="btn mt-3 px-5 py-2 font-weight-bold"-->
+<!--            style="background-color: blanchedalmond; border-radius: 15px;">Models</a>-->
+<!--        <a href="/static/manufacturer.html" class="btn mt-3 px-5 py-2 font-weight-bold"-->
+<!--            style="background-color: blanchedalmond; border-radius: 15px;">Manufacturer</a>-->
     </div>
 </body>
 
