Implement triple-S storage for product images, enhance product handler & repo, add CRUD web page for products

--- a/web/index.html
+++ b/web/index.html
@@ -16,8 +16,8 @@
             system<br></h1>
         <a href="/static/users.html" class="btn mt-3 px-5 py-2 font-weight-bold"
             style="background-color: blanchedalmond; border-radius: 15px;">Users</a>
-<!--        <a href="/static/model.html" class="btn mt-3 px-5 py-2 font-weight-bold"-->
-<!--            style="background-color: blanchedalmond; border-radius: 15px;">Models</a>-->
+        <a href="/static/products.html" class="btn mt-3 px-5 py-2 font-weight-bold"
+            style="background-color: blanchedalmond; border-radius: 15px;">Products</a>
 <!--        <a href="/static/manufacturer.html" class="btn mt-3 px-5 py-2 font-weight-bold"-->
 <!--            style="background-color: blanchedalmond; border-radius: 15px;">Manufacturer</a>-->
     </div>
