Added fronted web pages (home, login, register and etc.)

--- a/web/profile.html
+++ b/web/profile.html
@@ -1,128 +1,84 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Profile</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <style>
-        body {
-            /*background-image: url('/static/pictures/background/profile.jpg');*/
-            font-family: 'Arial', sans-serif;
-        }
-
-        .profile-container {
-            margin-top: 80px;
-        }
-
-        .profile-header {
-            background: linear-gradient(to right, #c8b39c, #9e7e67);
-            color: #fff;
-            border-radius: 20px 20px 0 0;
-            padding: 30px;
-        }
-
-
-        .card {
-            border: none;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        .card-body {
-            background-color: #fff8ee;
-            border-radius: 0 0 20px 20px;
-            padding: 20px;
-        }
-
-        .btn-primary {
-            background-color: #9e7e67;
-            border-color: #9e7e67;
-        }
-
-        .btn-primary:hover {
-            background-color: #7f634f;
-            border-color: #7f634f;
-        }
-
-        h1, p {
-            margin-bottom: 10px;
-        }
-
-        h6 {
-            color: #7f634f;
-        }
-
-
-    </style>
+    <title>Личный кабинет - TezTanda</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-
 <body>
-    <main class="profile-container">
-        <div class="container d-flex justify-content-center" style="margin-top: 120px; margin-bottom: 80px;">
-            <div class="card shadow-lg" style="width: 100%; max-width: 700px; border: none; border-radius: 20px;">
-                <div class="profile-header text-center p-5"
-                    style="background: linear-gradient(to right, #d2b48c, #8b5e3c); color: white; border-radius: 20px 20px 0 0;">
-                    <h2 id="profileName" class="mb-2">Your Name</h2>
-                    <p id="just" class="mb-0" style="font-size: 1rem;">Our honoured guest</p>
+    <div class="container mt-5">
+        <h2 class="text-center text-success">Личный кабинет</h2>
+
+        <div class="card shadow-lg mt-4 p-4">
+            <div class="text-center">
+                <h4 id="profileName" class="text-primary"></h4>
+                <p id="profileEmail" class="text-muted"></p>
+            </div>
+
+            <hr>
+
+            <div class="row">
+                <div class="col-md-6">
+                    <h5>Личные данные</h5>
+                    <p><strong>Имя:</strong> <span id="profileFullName">Загрузка...</span></p>
+                    <p><strong>Email:</strong> <span id="profileEmailText">Загрузка...</span></p>
+                    <p><strong>Роль:</strong> <span id="profileRole">Загрузка...</span></p>
                 </div>
-                <div class="card-body text-center px-4 py-5"
-                    style="background-color: #f5f5dc; border-radius: 0 0 20px 20px;">
-                    <h6 class="text-muted mb-4" style="font-size: 1rem;">User Information</h6>
-                    <p id="profileRole" style="font-size: 1.2rem; margin-bottom: 10px;">Our honoured guest</p>
-                    <p id="profileEmail" style="font-size: 1rem; color: #555;">Email: user@example.com</p>
-                    <button class="btn btn-outline-dark btn-sm px-4" data-toggle="modal" data-target="#editProfileModal"
-                        style="margin-top: 10px;">Edit Profile</button>
-                    <button class="btn btn-outline-danger btn-sm px-4 mt-2" onclick="logout()">Log Out</button>
+                <div class="col-md-6">
+                    <h5>История заказов</h5>
+                    <ul class="list-group" id="orderHistory">
+                        <li class="list-group-item">Загрузка...</li>
+                    </ul>
                 </div>
             </div>
+
+            <div class="text-center mt-4">
+                <button class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#editProfileModal">Редактировать профиль</button>
+                <button class="btn btn-danger" onclick="logout()">Выйти</button>
+            </div>
         </div>
-    </main>
+    </div>
 
-    </main>
-
-    <div class="modal fade" id="editProfileModal" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
+    <!-- Модальное окно редактирования -->
+    <div class="modal fade" id="editProfileModal" tabindex="-1" aria-labelledby="editProfileModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Edit Profile</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
+                    <h5 class="modal-title">Редактировать профиль</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <form id="editProfileForm">
-                        <div class="form-group">
-                            <label for="editName">Name</label>
+                        <div class="mb-3">
+                            <label for="editName" class="form-label">Имя</label>
                             <input type="text" class="form-control" id="editName">
                         </div>
-                        <div class="form-group">
-                            <label for="editSurname">Surname</label>
+                        <div class="mb-3">
+                            <label for="editSurname" class="form-label">Фамилия</label>
                             <input type="text" class="form-control" id="editSurname">
                         </div>
-                        <div class="form-group">
-                            <label for="editEmail">Email</label>
+                        <div class="mb-3">
+                            <label for="editEmail" class="form-label">Email</label>
                             <input type="email" class="form-control" id="editEmail">
                         </div>
-                        <div class="form-group">
-                            <label for="editPassword">Password</label>
+                        <div class="mb-3">
+                            <label for="editPassword" class="form-label">Пароль</label>
                             <input type="password" class="form-control" id="editPassword">
                         </div>
-                        <div class="form-group">
-                            <label for="editRole">Role</label>
+                        <div class="mb-3">
+                            <label for="editRole" class="form-label">Роль</label>
                             <input type="text" class="form-control" id="editRole">
                         </div>
-                        <button type="button" class="btn btn-primary" onclick="saveProfile()">Save Changes</button>
+                        <button type="button" class="btn btn-primary" onclick="saveProfile()">Сохранить изменения</button>
                     </form>
                 </div>
             </div>
         </div>
     </div>
 
-
-
     <script>
-        let userId = null; // Переменная для хранения ID пользователя
+        let userId = null;
 
         async function fetchProfile() {
             try {
@@ -131,28 +87,32 @@
                     credentials: 'include',
                 });
 
-                if (!response.ok) throw new Error('Failed to fetch profile data');
+                if (!response.ok) throw new Error('Ошибка загрузки профиля');
 
                 const userData = await response.json();
-                userId = userData.id; // Сохраняем ID пользователя
+                userId = userData.id;
 
-                document.getElementById('profileName').textContent = userData.name || 'Your Name';
-                document.getElementById('profileEmail').textContent = `Email: ${userData.email || 'user@example.com'}`;
-                document.getElementById('profileRole').textContent = userData.role || 'Our honoured guest';
+                document.getElementById('profileName').textContent = userData.name || 'Имя пользователя';
+                document.getElementById('profileFullName').textContent = `${userData.name || 'Имя'} ${userData.surname || 'Фамилия'}`;
+                document.getElementById('profileEmail').textContent = userData.email || 'user@example.com';
+                document.getElementById('profileEmailText').textContent = userData.email || 'user@example.com';
+                document.getElementById('profileRole').textContent = userData.role || 'Гость';
 
                 document.getElementById('editName').value = userData.name;
                 document.getElementById('editSurname').value = userData.surname;
                 document.getElementById('editRole').value = userData.role;
                 document.getElementById('editEmail').value = userData.email;
 
+                loadOrderHistory(userData.orders || []);
+
             } catch (error) {
-                console.error('Error:', error);
+                console.error('Ошибка:', error);
             }
         }
 
         async function saveProfile() {
             if (!userId) {
-                console.error('User ID is missing');
+                console.error('User ID отсутствует');
                 return;
             }
 
@@ -165,25 +125,24 @@
             };
 
             try {
-                const response = await fetch(`/users/${userId}`, { // Теперь отправляем запрос на /profile/{id}
+                const response = await fetch(`/users/${userId}`, {
                     method: 'PUT',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
+                    headers: { 'Content-Type': 'application/json' },
                     credentials: 'include',
-                    body: JSON.stringify(updatedUser)
+                    body: JSON.stringify(updatedUser),
                 });
 
-                if (!response.ok) throw new Error('Failed to update profile');
+                if (!response.ok) throw new Error('Ошибка обновления профиля');
 
                 fetchProfile();
-
-                $('#editProfileModal').modal('hide');
-                alert('User updated successfully!');
+                let modal = new bootstrap.Modal(document.getElementById('editProfileModal'));
+                modal.hide();
+                alert('Профиль обновлен!');
             } catch (error) {
-                console.error('Error updating profile:', error);
+                console.error('Ошибка обновления:', error);
             }
         }
+
         async function logout() {
             try {
                 const response = await fetch('/logout', {
@@ -191,20 +150,33 @@
                     credentials: 'include'
                 });
 
-                if (!response.ok) throw new Error('Failed to logout from profile');
+                if (!response.ok) throw new Error('Ошибка выхода');
 
                 window.location.href = "login.html";
             } catch (error) {
-                console.error('Logout error:', error);
+                console.error('Ошибка выхода:', error);
+            }
+        }
+
+        function loadOrderHistory(orders) {
+            let orderHistory = document.getElementById('orderHistory');
+            orderHistory.innerHTML = "";
+
+            if (orders.length === 0) {
+                orderHistory.innerHTML = '<li class="list-group-item">Нет заказов</li>';
+            } else {
+                orders.forEach(order => {
+                    let li = document.createElement('li');
+                    li.classList.add('list-group-item');
+                    li.textContent = `Заказ #${order.id} – ${order.amount} ₸`;
+                    orderHistory.appendChild(li);
+                });
             }
         }
 
         window.onload = fetchProfile;
     </script>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
