--- a/web/login.html
+++ b/web/login.html
@@ -4,119 +4,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <title>Login</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background: #f8f1e4;
-            color: #4a3323;
-            margin: 0;
-            padding: 0;
-            padding-top: 80px;
-        }
-
-        header {
-            border-bottom: 1px solid #e6dbc9;
-        }
-
-        #login-section {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .form-wrapper {
-            max-width: 780px;
-            width: 550px;
-            background: #fff;
-            border-radius: 12px;
-            padding: 30px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            border: 1px solid #e6dbc9;
-        }
-
-        h2 {
-            color: #7b4d29;
-            margin-bottom: 20px;
-            font-size: 24px;
-            font-weight: bold;
-        }
-
-        label {
-            font-weight: 500;
-            margin-bottom: 8px;
-            display: block;
-        }
-
-        input {
-            border: 1px solid #d3c5b3;
-            padding: 12px;
-            font-size: 16px;
-            width: 100%;
-            border-radius: 8px;
-            background-color: #fdfaf5;
-            transition: border 0.3s;
-        }
-
-        input:focus {
-            outline: none;
-            border-color: #a3835a;
-        }
-
-        button {
-            background: #7b4d29;
-            color: #fff;
-            padding: 10px;
-            font-size: 16px;
-            font-weight: bold;
-            border: none;
-            border-radius: 8px;
-            transition: background 0.3s;
-            margin-top: 10px;
-        }
-
-        button:hover {
-            background: #5a3820;
-        }
-
-        .btn-link {
-            text-decoration: none;
-            color: #82a35a;
-            font-weight: bold;
-            text-align: center;
-            display: block;
-            margin-top: 15px;
-            font-size: 14px;
-        }
-
-        .btn-link:hover {
-            color: #82a35a;
-            text-decoration: underline;
-        }
-    </style>
+    <title>Login - TezTanda</title>
+    <link rel="stylesheet" href="styles/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
+    <header class="bg-white shadow-sm">
+        <nav class="navbar navbar-expand-lg container">
+            <a class="navbar-brand fw-bold text-success" href="home.html">TezTanda</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link btn btn-outline-success me-2" href="login.html">Личный кабинет</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link btn btn-outline-success me-2" href="cart.html">Корзина 🛒</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link btn btn-outline-success" href="about.html">О нас</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    
 
-    <section id="login-section" class="container mt-5 py-5">
-        <div class="form-wrapper">
-            <h2 class="text-center">Log in Your Account</h2>
+    <div class="container d-flex justify-content-center align-items-center vh-100">
+        <div class="card p-4 shadow" style="width: 350px;">
+            <h2 class="text-center text-success">Вход</h2>
             <form id="login-form">
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" class="form-control" placeholder="Enter your email" required>
+                <div class="mb-3">
+                    <label for="email" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="email" placeholder="Введите email" required>
                 </div>
-                <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" id="password" class="form-control" placeholder="Create a password" required>
+                <div class="mb-3">
+                    <label for="password" class="form-label">Пароль</label>
+                    <input type="password" class="form-control" id="password" placeholder="Введите пароль" required>
                 </div>
-                <button id="login-submit" type="submit" class="btn btn-block" style="background-color: #a3835a">Log
-                    in</button>
-                <a href="/register" class="btn btn-link mt-3">If you do not have an account, Sign up</a>
+                <button type="submit" class="btn btn-success w-100">Войти</button>
             </form>
+            <p class="text-center mt-3">Нет аккаунта? <a href="register.html" class="text-success">Регистрация</a></p>
         </div>
-    </section>
+    </div>
+
     <script>
         const BASE_URL = 'http://localhost:8080';
         document.getElementById('login-form').addEventListener('submit', async (e) => {
@@ -127,8 +61,9 @@
                 password: document.getElementById('password').value,
             };
 
-            if (user.email=="aida@gmail.com"){
-                window.location.href="admin.html";
+            if (user.email === "aida@gmail.com") {
+                window.location.href = "admin.html";
+                return;
             }
 
             try {
@@ -148,7 +83,6 @@
                         console.error("Response is not JSON:", e);
                     }
                     throw new Error(errorMessage);
-
                 }
                 window.location.href = "profile.html";
             } catch (error) {
@@ -157,6 +91,8 @@
             }
         });
     </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
