--- a/web/cart.html
+++ b/web/cart.html
@@ -1,14 +1,127 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Корзина - TezTanda</title>
+    <title>Products - TezTanda</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        /* БАННЕР */
+        .banner {
+            position: relative;
+            background: url('images/fon.jpg') center/cover no-repeat;
+            height: 250px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            text-align: center;
+        }
+        .banner-content {
+            background: rgba(0, 0, 0, 0.5);
+            padding: 20px 40px;
+            border-radius: 10px;
+        }
+
+        /* КАРТОЧКИ */
+        .product-container {
+            max-width: 900px;
+            margin: auto;
+        }
+        .product-card {
+            width: 300px;
+            height: 450px;
+            margin: 15px;
+        }
+        .product-card img {
+            height: 240px;
+            object-fit: cover;
+            margin: auto;
+        }
+
+        /* ПАГИНАЦИЯ */
+        .pagination .page-item {
+            cursor: pointer;
+        }
+
+        /* ФИКСИРОВАННАЯ КНОПКА КОРЗИНЫ */
+        .fixed-cart-btn {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            z-index: 1000;
+            border-radius: 50%;
+            width: 60px;
+            height: 60px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 22px;
+            box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
+            transition: transform 0.3s ease;
+        }
+        .fixed-cart-btn:hover {
+            transform: scale(1.1);
+        }
+
+        /* ВСПЛЫВАЮЩАЯ КОРЗИНА */
+        .cart-popup {
+            position: fixed;
+            bottom: 90px;
+            right: 20px;
+            width: 300px;
+            background: white;
+            border: 1px solid #ddd;
+            border-radius: 10px;
+            padding: 15px;
+            box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
+            transform: translateY(20px);
+            opacity: 0;
+            visibility: hidden;
+            transition: all 0.3s ease;
+            z-index: 999;
+        }
+        .cart-popup.active {
+            transform: translateY(0);
+            opacity: 1;
+            visibility: visible;
+        }
+        .cart-popup h5 {
+            text-align: center;
+            margin-bottom: 10px;
+        }
+        .cart-items {
+            max-height: 200px;
+            overflow-y: auto;
+        }
+        .cart-item {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 5px;
+            border-bottom: 1px solid #ddd;
+        }
+        .cart-item img {
+            width: 40px;
+            height: 40px;
+            object-fit: cover;
+            border-radius: 5px;
+        }
+        .cart-item span {
+            flex: 1;
+            margin-left: 10px;
+        }
+        .cart-item button {
+            background: none;
+            border: none;
+            color: red;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
-    <header class="bg-white shadow-sm">
+    <header class="bg-white shadow-sm fixed-top">
         <nav class="navbar navbar-expand-lg container">
             <a class="navbar-brand fw-bold text-success" href="home.html">TezTanda</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -17,48 +130,103 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link btn btn-outline-success me-2" href="login.html">Личный кабинет</a>
+                        <a class="nav-link btn btn-outline-success me-2" href="cart.html">Cart</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link btn btn-outline-success me-2" href="cart.html">Корзина 🛒</a>
+                        <a class="nav-link btn btn-outline-success me-2" href="login.html">Account</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link btn btn-outline-success" href="about.html">О нас</a>
+                        <a class="nav-link btn btn-outline-success" href="about.html">About Us</a>
                     </li>
                 </ul>
             </div>
         </nav>
     </header>
-    <div class="container mt-5">
-        <h2 class="text-center text-success">🛒 Ваша корзина</h2>
-
-        <div class="cart-items mt-4">
-            <!-- Пример товара в корзине -->
-            <div class="card mb-3 shadow">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="placeholder.jpg" class="img-fluid rounded-start" alt="Продукт">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">Яблоки</h5>
-                            <p class="card-text text-muted">Цена: 1200 ₸</p>
-                            <div class="d-flex align-items-center">
-                                <input type="number" class="form-control w-25 me-2" value="1" min="1">
-                                <button class="btn btn-danger btn-sm">Удалить</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="text-center mt-4">
-            <h4>Итого: <span class="text-success">1200 ₸</span></h4>
-            <button class="btn btn-success mt-2">Оформить заказ</button>
+<br><br>
+    <!-- БАННЕР -->
+    <div class="banner">
+        <div class="banner-content">
+            <h1>All Products</h1>
+            <p>Explore our fresh and high-quality grocery selection</p>
         </div>
     </div>
 
+    <div class="container mt-4">
+        <div class="product-container">
+            <div class="row justify-content-center mt-4" id="products-list"></div>
+        </div>
+    </div>
+
+    <!-- ФИКСИРОВАННАЯ КНОПКА КОРЗИНЫ -->
+    <button id="cart-btn" class="btn btn-success fixed-cart-btn" onclick="toggleCartPopup()">
+        🛒 <span id="cart-count">0</span>
+    </button>
+
+    <!-- ВСПЛЫВАЮЩАЯ КОРЗИНА -->
+    <div id="cart-popup" class="cart-popup">
+        <h5>🛒 Your Cart</h5>
+        <div id="cart-items" class="cart-items"></div>
+        <p id="cart-total">Total: <span id="total-amount">0 ₸</span></p>
+        <button class="btn btn-danger w-100" onclick="clearCart()">Clear Cart</button>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        let cart = [];
+        let totalAmount = 0;
+
+        async function loadProducts() {
+            try {
+                const response = await fetch("http://localhost:8080/products");
+                const products = await response.json();
+                displayProducts(products);
+            } catch (error) {
+                console.error("Error loading products:", error);
+            }
+        }
+
+        function displayProducts(products) {
+            const productList = document.getElementById("products-list");
+            productList.innerHTML = "";
+            products.forEach(product => {
+                productList.innerHTML += `
+                    <div class="col-md-4 d-flex justify-content-center">
+                        <div class="card shadow-sm product-card">
+                            <img src="${product.image}" class="card-img-top" alt="${product.name}">
+                            <div class="card-body text-center">
+                                <h5 class="card-title">${product.name}</h5>
+                                <p class="text-success fw-bold">${product.price} ₸</p>
+                                <button class="btn btn-success w-100" onclick="addToCart('${product.id}', '${product.name}', '${product.image}', '${product.price}')">Add to Cart</button>
+                            </div>
+                        </div>
+                    </div>
+                `;
+            });
+        }
+
+        function addToCart(id, name, image, price) {
+            cart.push({ id, name, image, price: Number(price) });
+            totalAmount += Number(price);
+            updateCartDisplay();
+        }
+
+        function updateCartDisplay() {
+            const cartItemsContainer = document.getElementById("cart-items");
+            document.getElementById("cart-count").innerText = cart.length;
+            document.getElementById("total-amount").innerText = `${totalAmount.toLocaleString()} ₸`;
+        }
+
+        function clearCart() {
+            cart = [];
+            totalAmount = 0;
+            updateCartDisplay();
+        }
+
+        function toggleCartPopup() {
+            document.getElementById("cart-popup").classList.toggle("active");
+        }
+
+        loadProducts();
+    </script>
 </body>
 </html>
