Added 50 more data for default migration

--- a/web/home.html
+++ b/web/home.html
@@ -82,7 +82,7 @@
         <div class="col-md-2">
             <div class="category-card">
                 <img src="images/bakaleya.jpg" alt="Fruits" class="img-fluid mb-3">
-                <h5>Cereals & Bakery</h5>
+                <h5>Bakery</h5>
             </div>
         </div>
     </div>
