My changes in cart.html

--- a/web/cart.html
+++ b/web/cart.html
@@ -3,119 +3,88 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Products - TezTanda</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Shopping Cart</title>
+    <link rel="stylesheet" href="styles/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        /* БАННЕР */
-        .banner {
-            position: relative;
-            background: url('images/fon.jpg') center/cover no-repeat;
-            height: 250px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            text-align: center;
-        }
-        .banner-content {
-            background: rgba(0, 0, 0, 0.5);
-            padding: 20px 40px;
-            border-radius: 10px;
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f8f9fa;
         }
 
-        /* КАРТОЧКИ */
-        .product-container {
-            max-width: 900px;
+        .container {
+            width: 60%;
             margin: auto;
-        }
-        .product-card {
-            width: 300px;
-            height: 450px;
-            margin: 15px;
-        }
-        .product-card img {
-            height: 240px;
-            object-fit: cover;
-            margin: auto;
-        }
-
-        /* ПАГИНАЦИЯ */
-        .pagination .page-item {
-            cursor: pointer;
-        }
-
-        /* ФИКСИРОВАННАЯ КНОПКА КОРЗИНЫ */
-        .fixed-cart-btn {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            z-index: 1000;
-            border-radius: 50%;
-            width: 60px;
-            height: 60px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 22px;
-            box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
-            transition: transform 0.3s ease;
-        }
-        .fixed-cart-btn:hover {
-            transform: scale(1.1);
-        }
-
-        /* ВСПЛЫВАЮЩАЯ КОРЗИНА */
-        .cart-popup {
-            position: fixed;
-            bottom: 90px;
-            right: 20px;
-            width: 300px;
+            padding: 20px;
             background: white;
-            border: 1px solid #ddd;
-            border-radius: 10px;
-            padding: 15px;
-            box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
-            transform: translateY(20px);
-            opacity: 0;
-            visibility: hidden;
-            transition: all 0.3s ease;
-            z-index: 999;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
-        .cart-popup.active {
-            transform: translateY(0);
-            opacity: 1;
-            visibility: visible;
-        }
-        .cart-popup h5 {
+
+        h1 {
             text-align: center;
-            margin-bottom: 10px;
         }
-        .cart-items {
-            max-height: 200px;
-            overflow-y: auto;
-        }
+
         .cart-item {
             display: flex;
             align-items: center;
             justify-content: space-between;
-            padding: 5px;
+            padding: 15px;
             border-bottom: 1px solid #ddd;
         }
+
         .cart-item img {
-            width: 40px;
-            height: 40px;
+            width: 50px;
+            height: 50px;
             object-fit: cover;
-            border-radius: 5px;
+            margin-right: 10px;
         }
-        .cart-item span {
-            flex: 1;
-            margin-left: 10px;
+
+        .cart-item .details {
+            flex-grow: 1;
         }
-        .cart-item button {
-            background: none;
+
+        .quantity-control {
+            display: flex;
+            align-items: center;
+        }
+
+        .quantity-control button {
+            background-color: #28a745;
+            color: white;
             border: none;
-            color: red;
+            padding: 5px 10px;
+            cursor: pointer;
+        }
+
+        .quantity-control button:disabled {
+            background-color: #ccc;
+            cursor: not-allowed;
+        }
+
+        .remove {
+            background-color: #dc3545;
+            color: white;
+            border: none;
+            padding: 5px 10px;
+            cursor: pointer;
+        }
+
+        .cart-summary {
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        .cart-summary h3 {
+            margin-bottom: 10px;
+        }
+
+        #checkout {
+            background-color: #007bff;
+            color: white;
+            border: none;
+            padding: 10px 20px;
             cursor: pointer;
         }
     </style>
@@ -129,104 +98,144 @@
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link btn btn-outline-success me-2" href="cart.html">Cart</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link btn btn-outline-success me-2" href="login.html">Account</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link btn btn-outline-success" href="about.html">About Us</a>
-                    </li>
+                    <li class="nav-item"><a class="nav-link btn btn-outline-success" href="cart.html">My cart</a></li>
+                    <li class="nav-item"><a class="nav-link btn btn-outline-success me-2" href="all_products.html">Products</a></li>
+                    <li class="nav-item"><a class="nav-link btn btn-outline-success me-2" href="login.html">Account</a></li>
+                    <li class="nav-item"><a class="nav-link btn btn-outline-success" href="about.html">About Us</a></li>
                 </ul>
             </div>
         </nav>
     </header>
-<br><br>
-    <!-- БАННЕР -->
-    <div class="banner">
-        <div class="banner-content">
-            <h1>All Products</h1>
-            <p>Explore our fresh and high-quality grocery selection</p>
+<br><br><br>
+    <div class="container">
+        <h1>Your Cart</h1>
+        <div id="cart-items"></div>
+        <div class="cart-summary">
+            <h3>Total: <span id="total-price">0</span> KZT</h3>
+            <button id="checkout">Checkout</button>
         </div>
     </div>
 
-    <div class="container mt-4">
-        <div class="product-container">
-            <div class="row justify-content-center mt-4" id="products-list"></div>
-        </div>
-    </div>
-
-    <!-- ФИКСИРОВАННАЯ КНОПКА КОРЗИНЫ -->
-    <button id="cart-btn" class="btn btn-success fixed-cart-btn" onclick="toggleCartPopup()">
-        🛒 <span id="cart-count">0</span>
-    </button>
-
-    <!-- ВСПЛЫВАЮЩАЯ КОРЗИНА -->
-    <div id="cart-popup" class="cart-popup">
-        <h5>🛒 Your Cart</h5>
-        <div id="cart-items" class="cart-items"></div>
-        <p id="cart-total">Total: <span id="total-amount">0 ₸</span></p>
-        <button class="btn btn-danger w-100" onclick="clearCart()">Clear Cart</button>
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        let cart = [];
-        let totalAmount = 0;
+        document.addEventListener("DOMContentLoaded", () => {
+            const cartContainer = document.getElementById("cart-items");
+            const totalPriceEl = document.getElementById("total-price");
+            const checkoutButton = document.getElementById("checkout");
 
-        async function loadProducts() {
-            try {
-                const response = await fetch("http://localhost:8080/products");
-                const products = await response.json();
-                displayProducts(products);
-            } catch (error) {
-                console.error("Error loading products:", error);
+            function getCart() {
+                return JSON.parse(sessionStorage.getItem("cart")) || [];
             }
-        }
 
-        function displayProducts(products) {
-            const productList = document.getElementById("products-list");
-            productList.innerHTML = "";
-            products.forEach(product => {
-                productList.innerHTML += `
-                    <div class="col-md-4 d-flex justify-content-center">
-                        <div class="card shadow-sm product-card">
-                            <img src="${product.image}" class="card-img-top" alt="${product.name}">
-                            <div class="card-body text-center">
-                                <h5 class="card-title">${product.name}</h5>
-                                <p class="text-success fw-bold">${product.price} ₸</p>
-                                <button class="btn btn-success w-100" onclick="addToCart('${product.id}', '${product.name}', '${product.image}', '${product.price}')">Add to Cart</button>
-                            </div>
+            function saveCart(cart) {
+                sessionStorage.setItem("cart", JSON.stringify(cart));
+            }
+
+            function renderCart() {
+                const cart = getCart();
+                cartContainer.innerHTML = "";
+                let totalPrice = 0;
+
+                cart.forEach((item) => {
+                    const itemEl = document.createElement("div");
+                    itemEl.classList.add("cart-item");
+
+                    itemEl.innerHTML = `
+                        <img src="${item.image}" alt="${item.name}">
+                        <div class="details">
+                            <h3>${item.name}</h3>
+                            <p>Price: ${item.price} KZT</p>
                         </div>
-                    </div>
-                `;
+                        <div class="quantity-control">
+                            <button class="decrease" data-id="${item.id}">-</button>
+                            <span>${item.quantity}</span>
+                            <button class="increase" data-id="${item.id}">+</button>
+                        </div>
+                        <button class="remove" data-id="${item.id}">Remove</button>
+                    `;
+
+                    cartContainer.appendChild(itemEl);
+                    totalPrice += item.price * item.quantity;
+                });
+
+                totalPriceEl.textContent = totalPrice;
+            }
+
+            function updateQuantity(productId, action) {
+                let cart = getCart();
+                let product = cart.find(p => p.id === productId);
+
+                if (product) {
+                    if (action === "increase") {
+                        product.quantity++;
+                    } else if (action === "decrease") {
+                        if (product.quantity > 1) {
+                            product.quantity--;
+                        } else {
+                            cart = cart.filter(p => p.id !== productId); // Удаляем товар
+                        }
+                    }
+                    saveCart(cart);
+                    renderCart();
+                }
+            }
+
+            function removeItem(productId) {
+                let cart = getCart();
+                cart = cart.filter(p => p.id !== productId);
+                saveCart(cart);
+                renderCart();
+            }
+
+            cartContainer.addEventListener("click", (e) => {
+                const productId = e.target.dataset.id;
+                if (!productId) return;
+
+                if (e.target.classList.contains("increase")) {
+                    updateQuantity(productId, "increase");
+                } else if (e.target.classList.contains("decrease")) {
+                    updateQuantity(productId, "decrease");
+                } else if (e.target.classList.contains("remove")) {
+                    removeItem(productId);
+                }
             });
-        }
 
-        function addToCart(id, name, image, price) {
-            cart.push({ id, name, image, price: Number(price) });
-            totalAmount += Number(price);
-            updateCartDisplay();
-        }
+            checkoutButton.addEventListener("click", async () => {
+                const cart = getCart();
+                if (cart.length === 0) {
+                    alert("Your cart is empty!");
+                    return;
+                }
 
-        function updateCartDisplay() {
-            const cartItemsContainer = document.getElementById("cart-items");
-            document.getElementById("cart-count").innerText = cart.length;
-            document.getElementById("total-amount").innerText = `${totalAmount.toLocaleString()} ₸`;
-        }
+                const order = {
+                    items: cart,
+                    total: cart.reduce((sum, item) => sum + item.price * item.quantity, 0),
+                    timestamp: new Date().toISOString()
+                };
 
-        function clearCart() {
-            cart = [];
-            totalAmount = 0;
-            updateCartDisplay();
-        }
+                try {
+                    const response = await fetch("http://localhost:8080/orders", {
+                        method: "POST",
+                        headers: { "Content-Type": "application/json" },
+                        body: JSON.stringify(order)
+                    });
 
-        function toggleCartPopup() {
-            document.getElementById("cart-popup").classList.toggle("active");
-        }
+                    if (response.ok) {
+                        sessionStorage.removeItem("cart");
+                        renderCart();
+                        alert("Order placed successfully!");
+                    } else {
+                        alert("Failed to place order.");
+                    }
+                } catch (error) {
+                    console.error("Error:", error);
+                    alert("Error processing order.");
+                }
+        });
 
-        loadProducts();
+    renderCart();
+});
+
     </script>
+    
 </body>
 </html>
