--- a/web/register.html
+++ b/web/register.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <header class="bg-white shadow-sm">
+    <header class="bg-white shadow-sm fixed-top">
         <nav class="navbar navbar-expand-lg container">
             <a class="navbar-brand fw-bold text-success" href="home.html">TezTanda</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -16,20 +16,15 @@
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link btn btn-outline-success me-2" href="login.html">Личный кабинет</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link btn btn-outline-success me-2" href="cart.html">Корзина 🛒</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link btn btn-outline-success" href="about.html">О нас</a>
-                    </li>
+                    <li class="nav-item"><a class="nav-link btn btn-outline-success" href="cart.html">My cart</a></li>
+                    <li class="nav-item"><a class="nav-link btn btn-outline-success me-2" href="all_products.html">Products</a></li>
+                    <li class="nav-item"><a class="nav-link btn btn-outline-success me-2" href="login.html">Account</a></li>
+                    <li class="nav-item"><a class="nav-link btn btn-outline-success" href="about.html">About Us</a></li>
                 </ul>
             </div>
         </nav>
     </header>
-
+<br><br>
     <div class="container d-flex justify-content-center align-items-center vh-100">
         <div class="card p-4 shadow" style="width: 400px;">
             <h2 class="text-center text-success">Регистрация</h2>
