--- a/web/home.html
+++ b/web/home.html
@@ -13,22 +13,16 @@
 
 <header class="bg-white shadow-sm fixed-top">
     <nav class="navbar navbar-expand-lg container">
-        <a class="navbar-brand fw-bold text-success" href="index.html">TezTanda</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand fw-bold text-success" href="home.html">TezTanda</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link btn btn-outline-success me-2" href="cart.html">Products</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link btn btn-outline-success me-2" href="login.html">Account</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link btn btn-outline-success" href="#about-us">About Us</a>
-                </li>
+                <li class="nav-item"><a class="nav-link btn btn-outline-success" href="cart.html">My cart</a></li>
+                <li class="nav-item"><a class="nav-link btn btn-outline-success me-2" href="all_products.html">Products</a></li>
+                <li class="nav-item"><a class="nav-link btn btn-outline-success me-2" href="login.html">Account</a></li>
+                <li class="nav-item"><a class="nav-link btn btn-outline-success" href="about.html">About Us</a></li>
             </ul>
         </div>
     </nav>
